# Abliteration

./: .gitignore  .smoke.txt  AGENTS.md  LICENSE  README.md  benchmarks_npb.json  chat.py  compare_variants.py  pyproject.toml  rejudge_harmful.py  reports_circuit_qwen3-0.6b.json  run_benchmarks.py
.github/workflows/: tests.yml
abliteration/: cache.py  cli.py  heal.py  output.py
abliteration/ablation/: __init__.py  hooks.py  project.py  weights.py
abliteration/circuits/: attribution.py  backend.py  dla.py  localize.py  patching.py  report.py
abliteration/concepts/: __init__.py  concept.py  separability.py
abliteration/data/: __init__.py
abliteration/directions/: __init__.py  collect.py  directions.py  selection.py
abliteration/eval/: __init__.py  agentic.py  benchmarks.py  generate.py  judges.py  kl.py  llm_judge.py  refusal.py  report.py
abliteration/io/: __init__.py  export_gguf.py
abliteration/models/: adapter.py
abliteration/optimize/: __init__.py  objective.py  study.py
data/: agentic.txt  harmful.txt  harmless.txt  labeled_demo.jsonl  legitimate_negation.txt
files(4)/: README.md  SKILL.md  tooling_landscape.md  variants_math.md
meridian/: cache.py  cli.py  heal.py  output.py
meridian/ablation/: __init__.py  hooks.py  project.py  weights.py
meridian/atlas/: __init__.py  atlas.py  callback.py  discover.py  drift.py  subjects.py
meridian/circuits/: attribution.py  backend.py  dla.py  patching.py
meridian/concepts/: __init__.py  concept.py  probing.py  registry.py
meridian/data/: classes.py  dataset.py  formatting.py
meridian/directions/: __init__.py  collect.py  directions.py  selection.py
meridian/eval/: kl.py  report.py
meridian/io/: export_gguf.py
meridian/models/: __init__.py  adapter.py
meridian/optimize/: objective.py  study.py
results/: base-3b-eval.json  benchmarks_compare.json  benchmarks_gsm8k.json  compare_eval.json  rejudge_report.json  reports_circuit_qwen3-0.6b.json
scripts/: chat.py  compare_variants.py  rejudge_harmful.py  run_benchmarks.py
src/: cli.py  heal.py
src/ablation/: hooks.py  project.py  weights.py
src/circuits/: __init__.py  attribution.py  backend.py  dla.py  localize.py  patching.py  report.py
src/data/: classes.py  dataset.py  formatting.py
src/directions/: collect.py  directions.py  selection.py
src/eval/: __init__.py  agentic.py  benchmarks.py  generate.py  kl.py  llm_judge.py
src/io/: __init__.py  export_gguf.py
tests/: test_cache.py  test_heal.py  test_output.py
tests/ablation/: test_hooks.py  test_project.py  test_weights.py
tests/atlas/: test_atlas.py  test_build_and_series.py  test_callback.py  test_cli_atlas.py  test_discover.py  test_drift.py  test_subjects.py
tests/circuits/: test_attribution.py  test_backend.py  test_cli_circuit.py  test_dla.py  test_localize.py  test_patching.py  test_report.py  toymodel.py
tests/cli/: test_cli.py
tests/concepts/: test_concept.py  test_probing.py  test_registry.py  test_separability.py
tests/data/: test_dataset.py  test_formatting.py  test_holdout_determinism.py
tests/directions/: test_collect.py  test_directions.py  test_selection.py  test_top_k.py
tests/eval/: test_agentic.py  test_benchmarks_metric.py  test_benchmarks_report.py  test_dump_generations.py  test_judges.py  test_kl.py  test_llm_judge.py  test_metrics.py
tests/integration/: test_constraints.py
tests/io/: test_io.py
tests/models/: test_adapter.py
tests/optimize/: test_objective.py
