[project]
name = "abliteration"
version = "0.1.0"
description = "Outil d'abliteration de LLM préservant négation logique et capacités agentiques"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.44",
    "accelerate",
    "safetensors",
    "datasets",
    "numpy",
]

# Groupes optionnels : installés à la demande (harnais lourds, py3.14 = wheels incertaines).
[project.optional-dependencies]
optimize = ["optuna"]
quant = ["bitsandbytes"]          # mesure uniquement, jamais pour livrer des poids
eval = ["lm-eval"]                # MMLU/GSM8K/BBH/GPQA/IFEval (à valider sur py3.14)
dev = ["pytest>=8"]

# Point d'entrée console : `abliterate <sous-commande>` une fois `pip install -e .` fait.
[project.scripts]
abliterate = "abliteration.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abliteration"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "model: tests nécessitant transformers + un petit modèle (skip si absent)",
]
