[project]
name = "abliteration"
version = "0.1.0"
description = "Outil d'abliteration de LLM préservant négation logique et capacités agentiques"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.44",
    "accelerate",
    "safetensors",
    "datasets",
    "numpy",
]

# Groupes optionnels : installés à la demande (harnais lourds, py3.14 = wheels incertaines).
[project.optional-dependencies]
optimize = ["optuna"]
quant = ["bitsandbytes"]          # mesure uniquement, jamais pour livrer des poids
eval = ["lm-eval"]                # MMLU/GSM8K/BBH/GPQA/IFEval (à valider sur py3.14)
heal = ["peft"]                   # LoRA SFT de récupération agentique (abliteration.heal)
dev = ["pytest>=8", "ruff>=0.6"]

# Point d'entrée console : `abliterate <sous-commande>` une fois `pip install -e .` fait.
[project.scripts]
abliterate = "abliteration.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abliteration"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
# pyflakes (F) + erreurs pycodestyle (E) + tri des imports (I). On garde le lint
# utile (code mort, imports inutilisés) sans imposer un reformatage cosmétique.
select = ["E", "F", "I"]
ignore = [
    "E702",  # imports paresseux compacts `import torch; from ... import ...` dans les handlers CLI (volontaire)
    "E741",  # `l` = indice de couche (layer), convention mathématique du domaine
    "E731",  # `checker = lambda ...` ponctuel dans les tests (lisible ici)
    "E501",  # longueur de ligne : littéraux de prompt (RUBRIC) et help argparse non coupables sans nuire
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "model: tests nécessitant transformers + un petit modèle (skip si absent)",
]
